# physics-engine

./: .gitignore  CMakeLists.txt  README.md  format-code.sh  lint-cmake.sh
.github/workflows/: build_and_test.yml  cmake.yml  superlinter.yml
src/: CMakeLists.txt  collision_detection.cpp  collision_detection.h  drawing.cpp  drawing.h  main.cpp  math_lib.h  particle_physics_2d.cpp  particle_physics_2d.h  platform.h
test/: CMakeLists.txt  test_collision_detection.cpp  test_drawing.cpp  test_mat2.cpp  test_particle_physics_2d.cpp  test_vec2.cpp
